@@ -1,3 +1,8 @@
+2019-09-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* profile.c (pp_list, pp_concat): Fix use-after-free errors
+	in both routines. Thanks to valgrind and Andy's MEMDEBUG code.
+
 2019-09-01         Andrew J. Schorr      <aschorr@telemetry-investments.com>
 
 	* awk.h (block_header): Add cnt field even when MEMDEBUG is not
